--- a/css/style.css
+++ b/css/style.css
@@ -10,3 +10,13 @@
         background-color: rgba(0, 0, 255, 0.5);
         width: 23%
 }
+
+#rightPopup {
+	position:absolute;
+	top:0px;
+	right:0px;
+	background: white;
+	 color: white;
+        background-color: rgba(0, 0, 255, 0.5);
+        width: 23%
+}
